# Ultimate14-release

./: Cargo.toml
src/: custom_vars.rs  imports.rs  lib.rs  util.rs  vars.rs
src/fighter/: mod.rs
src/fighter/chrom/: agent_init.rs  mod.rs  opff.rs  status.rs
src/fighter/chrom/acmd/: aerials.rs  ground.rs  mod.rs  smashes.rs
src/fighter/common/: functions.rs  mod.rs  opff.rs  vtables.rs
src/fighter/common/status/: cliff.rs  escape.rs  guard_off.rs  mod.rs
src/fighter/daisy/: agent_init.rs  mod.rs  opff.rs  status.rs
src/fighter/daisy/acmd/: aerials.rs  mod.rs  movement.rs  tilts.rs
src/fighter/ganon/: agent_init.rs  mod.rs  opff.rs  status.rs
src/fighter/ganon/acmd/: aerials.rs  jabs.rs  mod.rs  throws.rs  tilts.rs
src/fighter/ganon/status/: specialhi.rs  specials.rs
src/fighter/kirby/: agent_init.rs  hat.rs  mod.rs  opff.rs
src/fighter/link/: agent_init.rs  mod.rs  status.rs
src/fighter/link/acmd/: aerials.rs  ground.rs  mod.rs  movement.rs  smashes.rs  tilts.rs
src/fighter/link/status/: attachwall.rs  attackair.rs  guard.rs  specialhi.rs  specials.rs
src/fighter/lucas/: mod.rs  opff.rs  vtable.rs
src/fighter/lucas/acmd/: aerials.rs  mod.rs  tilts.rs
src/fighter/lucas/pkfire/: acmd.rs  mod.rs
src/fighter/lucas/pkfreeze/: acmd.rs  mod.rs  status.rs
src/fighter/lucas/status/: mod.rs  speciallw.rs  specialn.rs
src/fighter/lucina/: agent_init.rs  mod.rs  opff.rs  status.rs
src/fighter/lucina/acmd/: aerials.rs  ground.rs  jabs.rs  mod.rs  smashes.rs  taunts.rs  tilts.rs
src/fighter/lucina/arrow/: acmd.rs  mod.rs  status.rs
src/fighter/lucina/status/: specialn.rs  specials.rs
src/fighter/mario/: agent_init.rs  mod.rs  opff.rs
src/fighter/mario/acmd/: aerials.rs  mod.rs  smashes.rs
src/fighter/mario/cappy/: acmd.rs  mod.rs
src/fighter/mario/status/: appeal.rs  capcatch.rs  capdive.rs  capjump.rs  mod.rs  specials.rs  wait.rs
src/fighter/mariod/: agent_init.rs  mod.rs
src/fighter/mariod/acmd/: aerials.rs  mod.rs  specials.rs  throws.rs  tilts.rs
src/fighter/peach/: mod.rs
src/fighter/peach/acmd/: mod.rs
src/fighter/pit/: mod.rs
src/fighter/pit/acmd/: mod.rs
src/fighter/pitb/: agent_init.rs  mod.rs  opff.rs  status.rs
src/fighter/pitb/acmd/: aerials.rs  mod.rs
src/fighter/pitb/orbitar/: acmd.rs  mod.rs  status.rs
src/fighter/pitb/status/: specialhi.rs  specialhi_elec.rs  speciallw.rs
src/fighter/richter/: agent_init.rs  axe.rs  mod.rs  opff.rs  params.rs  status.rs
src/fighter/richter/acmd/: mod.rs  tilts.rs
src/fighter/samusd/: agent_init.rs  mod.rs  opff.rs  status.rs
src/fighter/samusd/acmd/: aerials.rs  ground.rs  mod.rs  smashes.rs  throws.rs  tilts.rs
src/fighter/shared/: aegis.rs  belmonts.rs  mod.rs  pits.rs  samus.rs  villagers.rs
src/fighter/shizue/: agent_init.rs  clayrocket.rs  mod.rs  pot.rs  status.rs
src/fighter/simon/: mod.rs  status.rs
src/fighter/sonic/: agent_init.rs  mod.rs
src/fighter/toonlink/: boomerang.rs  bowarrow.rs  mod.rs  status.rs  vtable.rs
(+84 files in other folders)
