[package]
name = "ultimate14"
path = "src/lib.rs"
version = "13.1.0"
authors = ["C# <@CSharpM7>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }

smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smash_rs = { git = "https://github.com/blu-dev/smash-rs", package = "smash" }
wubor_utils = { path = "../../Wubor-Utils"}

sharpsmashlinesuite = { path = "../../SharpSmashlineSuite", features = ["modules"] }
param_config = { path = "../../paramconfig"}

once_cell = "1.12.0"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api"}
lazy_static = "1.4.0"

#the_csk_collection_api = { git = "https://github.com/Coolsonickirby/the_csk_collection_api" }

interpolation = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1

[features]
dev         = []
devhook     = []
pitb         = []
eflame       = []
elight       = []
purin        = []
younglink    = []
pzenigame    = []
pfushigisou  = []
plizardon    = []
shulk        = []
chrom        = []
miifighter   = []
gamewatch    = []
krool        = []
samusd       = []
ryu          = []
rosetta      = []
yoshi        = []
lucas        = []
link         = []
lucario      = []
zelda        = []
kamui        = []
wolf         = []
tantan       = []
koopag       = []
ridley       = []
gekkouga     = []
ike          = []
roy          = []
rockman      = []
peach        = []
gaogaen      = []
falco        = []
ness         = []
kirby        = []
pikachu      = []
daisy        = []
sheik        = []
mariod       = []
luigi        = []
captain      = []
mario        = []
jack         = []
palutena     = []
dolly        = []
pickel       = []
wiifit       = []
pichu        = []
pit          = []
ken          = []
brave        = []
richter      = []
miiswordsman = []
robin        = []
master       = []
robot        = []
szerosuit    = []
ganon        = []
wario        = []
diddy        = []
shizue       = []
littlemac    = []
pacman       = []
edge         = []
marth        = []
trail        = []
mewtwo       = []
metaknight   = []
toonlink     = []
koopajr      = []
sonic        = []
donkey       = []
inkling      = []
packun       = []
miigunner    = []
buddy        = []
pikmin       = []
cloud        = []
fox          = []
duckhunt     = []
lucina       = []
murabito     = []
bayonetta    = []
samus        = []
koopa        = []
simon        = []
ice_climber  = []
dedede       = []
snake        = []
demon        = []